# routes/api/drinks.js
@@ -4,8 +4,8 @@ const router = express.Router();
 const wrapper = require("../../helpers/wrapper");
 const method = require("../../controllers/drinks");
 
-const { validateSchema, upload } = require('../../middlewares/index')
-const { addMyJoiSchema } = require('../../models/joiSchemas/drink')
+const { validateSchema, upload } = require("../../middlewares");
+const { addMyJoiSchema } = require("../../models/joiSchemas/drink");
 
 router.get("/mainpage", wrapper(method.getMainPage));
 
@@ -13,9 +13,12 @@ router.get("/popular", wrapper(method.getPopular));
 
 router.get("/search", wrapper(method.search));
 
-router.get("/:id", wrapper(method.getById));
-
-router.post("/own/add", upload.single("avatar"), validateSchema(addMyJoiSchema), wrapper(method.addMy));
+router.post(
+  "/own/add",
+  upload.single("avatar"),
+  validateSchema(addMyJoiSchema),
+  wrapper(method.addMy)
+);
 
 router.delete("/own/remove/:id", wrapper(method.removeMy));
 
@@ -26,5 +29,7 @@ router.post("/favorite/add", wrapper(method.addFavorite));
 router.delete("/favorite/remove", wrapper(method.removeFavorite));
 
 router.get("/favorite", wrapper(method.getFavorite));
+
+router.get("/:id", wrapper(method.getById));
 
 module.exports = router;
